[tool.poetry]
name = "htmshop"
version = "0.1.0"
description = ""
authors = ["Alexandre Karpov <alexakarpov@gmail.com>"]
license = "MIT"

packages = [
    { include = "ecommerce" }
]

[tool.poetry.dependencies]
python = "3.8.10"
gunicorn = "^20"
python-dotenv = "^0.15"
Pillow = "^9"
psycopg2 = "^2.9.3"
django-ses = "^2.3.1"
Django = "^4.0.1"
shipengine = "^1.0.0"
Pint = "^0.18"
# squareup = "^19.0.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3"
isort = "^5.7"
pytest-django = "^4.4"
pytest-factoryboy = "^2.1"
pytest-faker = "^2.0.0"
coverage = "^6.2"
black = "^21.12b0"
django-extensions = "^3.1.5"
pytest-selenium = "^2.0.1"
autopep8 = "^1.6.0"
bpython = "^0.23"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
