[tool.poetry]
name = "htmshop"
version = "0.1.0"
description = "ecommerce project HTM"
authors = ["Alexandre Karpov <alexakarpov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.4, <4"
gunicorn = "^20"
python-dotenv = "^0.15"
Pillow = "^9"
psycopg2 = "^2.9.3"
django-ses = "^2.3.1"
Django = "^4.0.1"
shipengine = "^1.0.0"
Pint = "^0.18"
djangorestframework = "^3.13.1"
django-mptt = "^0.14.0"
simplejson = "^3.18.1"
#xhtml2pdf = "^0.2.8"
djangorestframework-xml = "^2.0.0"
squareup = "^27.0.0.20230517"
urllib3 = ">=1.25,<1.27"
djlint = "^1.30.2"
django-simple-history = "^3.3.0"
django-admin-rangefilter = "^0.11.1"

[tool.poetry.group.dev.dependencies]
pytest-selenium = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3"
isort = "^5.7"
pytest-django = "^4.4"
pytest-factoryboy = "^2.1"
pytest-faker = "^2.0.0"
coverage = "^6.2"
black = "^20"
django-extensions = "^3.1.5"
autopep8 = "^1.6.0"
bpython = "^0.23"

[tool.black]
line-length = 79
